# Azalea

./: Cargo.toml  README.md
src/: main.rs  tests.rs
src/cmd/: mod.rs  utils.rs
src/cmd/impl_/: disassemble.rs  dump.rs  inject.rs  memory.rs  mod.rs  pointer.rs  prot.rs  rw.rs  scan.rs  string.rs  thread.rs
src/cmd/impl_/analysis/: disassemble.rs  mod.rs  pointer.rs  scan.rs  string.rs
src/cmd/impl_/memory/: dump.rs  info.rs  mod.rs  prot.rs  rw.rs
src/cmd/impl_/patching/: detour.rs  mod.rs  patch.rs
src/cmd/impl_/process/: inject.rs  mod.rs  processes.rs  thread.rs
src/cmd/util/: assembler.rs  disassembler.rs  mod.rs
src/tests/: tests.rs
src/util/: log.rs  mod.rs
