[package]
name = "azalea"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
winapi = { version = "0.3.9", features = ["winuser", "synchapi" , "libloaderapi", "winbase" ,"processthreadsapi", "memoryapi", "handleapi", "tlhelp32", "errhandlingapi", "securitybaseapi", "wow64apiset", "psapi"] }
colored = "3.0.0"
thiserror = "2.0.12"
iced-x86 = "1.20"
anyhow = "1.0"
log = "0.4"